<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reciclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:scrollbars="vertical"
    android:textAlignment="center"
    tools:menu="@menu/menu_list">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@color/cardview_shadow_end_color"
        android:orientation="vertical">


        <TextView
            android:id="@+id/TextViewTitle"
            style="@style/MyStyle"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="100dp"
            android:text="@string/formulario_de_registro"
            android:textAlignment="center"
            android:textColor="#4451A8"
            android:textSize="10pt"></TextView>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            app:srcCompat="@android:drawable/ic_menu_crop" />

        <Button
            android:id="@+id/CleanButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Limpiar imagen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imputname"
                android:layout_width="256dp"
                android:layout_height="162dp"

                android:hint="">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextName"
                    style="@style/MyStyle"
                    android:layout_width="279dp"

                    android:layout_height="97dp"
                    android:background="@drawable/fondo"
                    android:baselineAligned="false"
                    android:hint="@string/nombre"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="107dp"
                android:layout_height="44dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="120px"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_sort_alphabetically"
                android:textAlignment="textEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imputsurname"
                android:layout_width="245dp"
                android:layout_height="157dp"
                android:layout_marginTop="40dp"
                android:hint="">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextsurname"
                    style="@style/MyStyle"
                    android:layout_width="285dp"
                    android:layout_height="99dp"

                    android:background="@drawable/fondo"
                    android:baselineAligned="false"
                    android:hint="@string/apellidos"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="334dp"
                android:layout_height="80dp"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_launcher_foreground" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imputdate"
                android:layout_width="219dp"
                android:layout_height="78dp"

                android:layout_marginTop="50dp"
                android:hint="">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTexDate"
                    style="@style/MyStyle"
                    android:layout_width="256dp"
                    android:layout_height="78dp"
                    android:background="@drawable/fondo"
                    android:hint="@string/fecha_de_nacimiento"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:textSize="14sp"
                    android:textStyle="normal"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/CalendarButton"
                android:layout_width="85dp"
                android:layout_height="48dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="75dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="#263A97"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imputEmail"
                android:layout_width="274dp"
                android:layout_height="106dp"
                android:layout_marginTop="30dp"
                android:hint="">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextEmail"
                    style="@style/MyStyle"
                    android:layout_width="264dp"
                    android:layout_height="75dp"
                    android:background="@drawable/fondo"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="49dp"
                android:layout_height="54dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/sym_action_email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imputPassword"
                android:layout_width="271dp"
                android:layout_height="97dp"
                android:layout_marginTop="30dp"
                android:hint="">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextPassword"
                    style="@style/MyStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="81dp"
                    android:background="@drawable/fondo"
                    android:hint="Contraseña"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="97dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:srcCompat="?android:attr/textSelectHandleRight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/SpinnerFeedbackType"
                style="@style/MyStyle"
                android:layout_width="199dp"
                android:layout_height="74dp"
                android:layout_marginTop="10dp"
                android:entries="@array/feedbacktypelist"
                android:prompt="@string/feedbacktype1"></Spinner>

            <Button
                android:id="@+id/buttonVoz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/a_adir" />

        </LinearLayout>

        <Switch
            android:id="@+id/profesionalS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profesional" />

        <Button
            android:id="@+id/ButtonRegistro"
            style="@style/MyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#45499C"
            android:foregroundTint="#031265"
            android:gravity="center"
            android:onClick="sendFeedback"
            android:paddingTop="100px"
            android:shadowDx="@dimen/material_emphasis_high_type"
            android:shadowDy="4"

            android:text="@string/guardar"
            android:textColor="#ABA4BF"
            android:textSize="24sp"
            android:textStyle="bold"></Button>


        <Button
            android:id="@+id/ButtonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#CA2121"
            android:foregroundTint="#020512"
            android:gravity="center"
            android:onClick="sendFeedback"
            android:paddingTop="100px"
            android:shadowDx="@dimen/material_emphasis_high_type"
            android:shadowDy="4"
            android:text="@string/eliminar"

            android:textColor="#ABA4BF"
            android:textSize="24sp"
            android:textStyle="bold"></Button>

    </LinearLayout>
</ScrollView>